RESOLVED FIXED 267451
[iOS] REGRESSION (266293@main): Video automatically pauses in fullscreen when youtube.com is open in multiple tabs
https://bugs.webkit.org/show_bug.cgi?id=267451
Summary [iOS] REGRESSION (266293@main): Video automatically pauses in fullscreen when...
youenn fablet
Reported 2024-01-12 05:02:36 PST
[iOS] REGRESSION (266293@main): Video automatically pauses in fullscreen when youtube.com is open in multiple tabs
Attachments
youenn fablet
Comment 1 2024-01-12 05:02:47 PST
youenn fablet
Comment 2 2024-01-12 05:38:20 PST
EWS
Comment 3 2024-01-15 00:41:08 PST
Committed 273032@main (7c93c4a37091): <https://commits.webkit.org/273032@main> Reviewed commits have been landed. Closing PR #22705 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.