Source/WebKit/GPUProcess/media/RemoteAudioSessionProxy.cpp
@@ -96,8 +96,11 @@ void RemoteAudioSessionProxy::tryToSetActive(bool active, SetActiveCompletion&& 
 {
     auto success = audioSessionManager().tryToSetActiveForProcess(*this, active);
     bool hasActiveChanged = success && m_active != active;
-    if (success)
+    if (success) {
         m_active = active;
+        if (m_active)
+            m_isInterrupted = false;
+    }
 
     completion(success);
 
